# repo-health-bot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  repo_health_bot.py
.codex/self-improve/: run-checks.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_feedback.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  eval-from-issue.yml  issue-triage.yml  pr-summary.yml  redteam-review.yml  sync-labels.yml
docs/: ADDITIONAL_AUTOMATION.md  AFTER_PUSH_MANUAL.md  PROJECT_STATUS.md  SELF_IMPROVEMENT_LOOP.md  START_HERE.md  knowledge.md
evals/: docs_qa.jsonl
policies/: self_improvement_policy.md
prompts/: docs_qa_system.md  improvement_planner.md
scripts/: smoke.ps1  smoke.sh
src/maintainer_bot/: __init__.py  config.py  docs_eval.py  docs_patch.py  eval_store.py  issue_forms.py  llm.py  pr_summary.py  reports.py  status.py
tests/: test_auto_merge_policy.py  test_repo_health_bot.py
